# xtoproto

./: WORKSPACE
expression/: BUILD.bazel  expression.go  expression_test.go
expression/expressions/: BUILD.bazel  expressions.go  expressions_test.go
expression/formula/: BUILD.bazel  formula.go  formula_ast.go  formula_ast_test.go  formula_ast_types.go  formula_builtins.go  formula_test.go
expression/formula/testdata/ircases/: BUILD.bazel  case1.formula  case1.golden.pbtxt  case1.prototext  case2.formula  case2.golden.pbtxt  case3.formula  case3.golden.pbtxt  ircases.go
expression/formula/testdata/ircases/goldentests/: BUILD.bazel  goldentests_test.go
expression/formula/testdata/ircases/regenerate/: BUILD.bazel  regenerate.go
proto/expression/: BUILD.bazel  expression.proto
proto/expression/formulair/: BUILD.bazel  formulair.proto
proto/internal/formulair/: BUILD.bazel  formulair.proto
releasing/generate_pb_go_files/: BUILD.bazel
releasing/make_release/: make_release.go
