load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["expression.go"],
    importpath = "github.com/google/xtoproto/expression",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/expression:go_default_library",
        "//sexpr:go_default_library",
        "//sexpr/form:go_default_library",
        "@org_golang_google_protobuf//encoding/prototext:go_default_library",
    ],
)
