load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "expression_proto",
    srcs = ["expression.proto"],
    import_prefix = "github.com/google/xtoproto",
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:any_proto"],
)

go_proto_library(
    name = "expression_go_proto",
    importpath = "github.com/google/xtoproto/proto/expression",
    proto = ":expression_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":expression_go_proto"],
    importpath = "github.com/google/xtoproto/proto/expression",
    visibility = ["//visibility:public"],
)
