load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "formulair_proto",
    srcs = ["formulair.proto"],
    import_prefix = "github.com/google/xtoproto",
    visibility = [
        "//expression/formula:__subpackages__",
        "//proto:__subpackages__",
        "//releasing:__subpackages__",
    ],
    deps = ["//proto/expression:expression_proto"],
)

go_proto_library(
    name = "formulair_go_proto",
    importpath = "github.com/google/xtoproto/proto/internal/formulair",
    proto = ":formulair_proto",
    visibility = [
        "//expression/formula:__subpackages__",
        "//proto:__subpackages__",
        "//releasing:__subpackages__",
    ],
    deps = ["//proto/expression:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":formulair_go_proto"],
    importpath = "github.com/google/xtoproto/proto/internal/formulair",
    visibility = [
        "//expression/formula:__subpackages__",
        "//proto:__subpackages__",
        "//releasing:__subpackages__",
    ],
)
