load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["goldentests_test.go"],
    data = [
        "//expression/formula/testdata/ircases:golden_data",
    ],
    deps = [
        "//expression:go_default_library",
        "//expression/formula/testdata/ircases:go_default_library",
        "//proto/expression:go_default_library",
        "//proto/expression/formulair:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@org_golang_google_protobuf//testing/protocmp:go_default_library",
    ],
)
